Fix form overlapping footer on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -818,7 +818,7 @@ button {
     font-size: 14px;
   }
   .article_footer .h {
-    padding: 630px 0 0 0;
+    padding: 780px 0 0 0;
     background: #fafafa;
     margin-left: 0;
   }
